# KinematicPositionSynthesis

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindowform.ui  two_position_synthesis.hpp  twopos_unittests.cpp
